@@ -95,6 +95,7 @@
 	* Added support for facet type configuration dependent filter parsers in tx_solr_query_modifier_Faceting
 	* Added support for facet type configuration dependent query facet parameter builders
 	* Added feature #30200: Support for range facets using jQuery ui sliders, credits Michiel Roos
+	* Changed the install script to allow installing multipple language configurations, improved pre-condition checks, credits Loek Hilgersom
 
 2012-02-13  Ingo Renner  <ingo.renner@dkd.de>
 
